--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
+    //Coordin
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+
     implementation 'com.jakewharton:butterknife:10.0.0'// btknf
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'//btknf
 }
