--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,18 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
+    //cardview
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+//    implementation "androidx.cardview:cardview:1.0.0"
+    //implementation 'com.android.support:cardview-v7:28.0.0'
+
     //Coordin
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+
+    //Recycler View
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     implementation 'com.jakewharton:butterknife:10.0.0'// btknf
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'//btknf
