--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     //cardview
     implementation 'androidx.appcompat:appcompat:1.0.0'
 
