--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".News"></activity>
         <activity
-            android:name=".Splash"
+            android:name=".ui.Splash"
             android:label="@string/app_name"
             android:theme="@style/NoActionBarTheme">
             <intent-filter>
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".ui.MainActivity"
             ></activity>
     </application>
 
