--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
     }
 }
 
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -46,6 +49,10 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 //    implementation "androidx.cardview:cardview:1.0.0"
     //implementation 'com.android.support:cardview-v7:28.0.0'
+
+    // Firebase
+
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
     //Coordin
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
