--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login"></activity>
-        <activity android:name=".CreateAccount" />
+        <activity android:name=".ui.Login"></activity>
+        <activity android:name=".ui.CreateAccount" />
         <activity android:name=".News" />
         <activity
             android:name=".ui.Splash"
