--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,10 @@ dependencies {
     // Firebase
 
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
 
+    implementation 'com.google.firebase:firebase-core:17.2.2'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
     //Coordin
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 
