--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.DetailActivity"></activity>
+        <activity android:name=".ui.DetailActivity"
+            android:theme="@style/NoActionBarTheme">
+
+        </activity>
         <activity android:name=".ui.Login" />
         <activity android:name=".ui.CreateAccount" />
         <activity android:name=".News" />
