--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,11 +52,13 @@ dependencies {
 
     // Firebase
 
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'// analytics
+    implementation 'com.google.firebase:firebase-auth:19.2.0'//auth
 
-    implementation 'com.google.firebase:firebase-core:17.2.2'
-    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-core:17.2.2'//core
+    implementation 'com.google.firebase:firebase-database:19.2.1'//db
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'//uidb
+
     //Coordin
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 
