--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/iconN"
+        android:icon="@mipmap/icon_news"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/iconN"
+        android:roundIcon="@mipmap/icon_news"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.DetailActivity"
